add password change

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,6 +15,8 @@
         <a href="{{ url_for('auth.register') }}">
             Click here to register
         </a>
+		<br>
+		<a href="{{ url_for('auth.password_reset_request') }}">Reset Password</a>
     </p>
 </div>
 {% endblock %}
