--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                       <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
+                      <li><a href="{{ url_for('auth.change_email') }}">Change email</a></li>
                       <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
                     </ul>
                 </li>
