--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 {% endblock %}
+
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
@@ -23,12 +24,9 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
-        {% if current_user.is_authenticated %}
-        <li><a href="{{ url_for('main.user', username=current_user.username )}}">
-            Profle
-          </a>
-        </li>
-        {% endif %}
+                {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('main.user', username=current_user.username )}}">Profle</a></li>
+                {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
@@ -37,11 +35,10 @@
                       <img src="{{ current_user.gravatar(size=18) }}">
                       Account <b class="caret"></b>
                   </a>
-
                     <ul class="dropdown-menu">
-                      <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
-                      <li><a href="{{ url_for('auth.change_email') }}">Change email</a></li>
-                      <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                        <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
+                        <li><a href="{{ url_for('auth.change_email') }}">Change email</a></li>
+                        <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
                     </ul>
                 </li>
                 {% else %}
