--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -21,6 +21,9 @@
                 <a href="{{ url_for('.edit', id=post.id) }}">
                     <span class="label label-primary">Edit</span>
                 </a>
+                <a href="{{ url_for('.delete_post', id=post.id)}}">
+                    <span class="label label-warning">Delete</span>
+                </a>
                 {% elif current_user.is_administrator() %}
                 <a href="{{ url_for('.edit', id=post.id) }}">
                     <span class="label label-danger">Edit [Admin]</span>
